--- a/ai/package.json
+++ b/ai/package.json
@@ -13,11 +13,14 @@
     "@langchain/ollama": "^0.2.2",
     "@langchain/openai": "^0.5.13",
     "@langchain/tavily": "^0.1.3",
+    "@types/node": "^24.0.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "langchain": "^0.3.29",
     "pdf-parse": "^1.1.1",
-    "wikipedia": "^2.1.2",
-    "express-rate-limit": "^7.5.1"
+    "typescript": "^5.8.3",
+    "wikipedia": "^2.1.2"
   },
   "author": "Vikrama Aditya Bharatula",
   "license": "ISC",
